--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+body{
+	background: #f8f8f8;
+}
+
+.book-library{
+	background: #ffffff;
+}
+
+.book{
+	
+}
+
+.btn{
+	
+}
